tests/baselines/reference/objectLiteralIndexerErrors.errors.txt
tests/cases/compiler/objectLiteralIndexerErrors.ts(13,5): error TS2322: Type '{ x: B; 0: A; }' is not assignable to type '{ [s: string]: A; [n: number]: B; }'.
  Property '0' is incompatible with index signature.
    Type 'A' is not assignable to type 'B'.
      Property 'y' is missing in type 'A'.
tests/cases/compiler/objectLiteralIndexerErrors.ts(14,1): error TS2322: Type '{ x: any; 0: A; }' is not assignable to type '{ [s: string]: A; [n: number]: B; }'.
  Property '0' is incompatible with index signature.
    Type 'A' is not assignable to type 'B'.


==== tests/cases/compiler/objectLiteralIndexerErrors.ts (2 errors) ====
    interface A {
        x: number;
    }
    
    interface B extends A {
        y: string;
    }
    
    var a: A;
    var b: B;
    var c: any;
    
    var o1: { [s: string]: A;[n: number]: B; } = { x: b, 0: a }; // both indexers are A
        ~~
!!! error TS2322: Type '{ x: B; 0: A; }' is not assignable to type '{ [s: string]: A; [n: number]: B; }'.
!!! error TS2322:   Property '0' is incompatible with index signature.
!!! error TS2322:     Type 'A' is not assignable to type 'B'.
!!! error TS2322:       Property 'y' is missing in type 'A'.
    o1 = { x: c, 0: a }; // string indexer is any, number indexer is A
    ~~
!!! error TS2322: Type '{ x: any; 0: A; }' is not assignable to type '{ [s: string]: A; [n: number]: B; }'.
!!! error TS2322:   Property '0' is incompatible with index signature.
!!! error TS2322:     Type 'A' is not assignable to type 'B'.